--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/pic14.jpg" alt="" />
+										<img src="images/gui.jpg" alt="" />
 									</span>
 								</section>
 
@@ -117,7 +117,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic13.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/Rossmann.jpg" alt="" /></a>
 											<h3>Construção de um programa de previsão de vendas.</h3>
 											<p>Eu usei Python, Estatística e tecnicas não-supervisionadas de Machine Learning . O diretor financeiro (CFO) exigiu modelos de previsão para a equipe de análise para apoiar sua decisão de quanto orçamento em cada loja precisa ser alocado.</p>
 											<ul class="actions">
