--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Olá, seja bem vindo(a) ao meu portfólio de projetos de Ciência de Dados<br />
+											<h1>Olá, Seja Bem vindo(a) ao Meu Portfólio de Projetos de Ciência de Dados<br />
 											</h1>
 											<p>Nessa página, eu demonstro minhas habilidades de resolver problemas de negócio utilizando conceitos e ferramentas da ciência de dados, através de projetos com dados públicos</p>
 										</header>
@@ -46,7 +46,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/gui.jpg" alt="" />
+										<img src="images/gui.jpg" />
 									</span>
 								</section>
 
