--- a/index.html
+++ b/index.html
@@ -22,13 +22,10 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><h3>Guilherme Marques</h3> </a>
+									<a href="index.html" class="logo"><h3>Guilherme Acacio Silva Marques</h3> </a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+									
+									
 									</ul>
 								</header>
 
