--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic12.jpg" alt="" /></a>
-											<h3>Identificação de imóveis para compra e revenda a fim de maximizar o lucro</h3>
-											<p>Identificação de imóveis abaixo do preço médio de venda e definição do preço ideal de revenda, a partir de uma análise exploratória de dados em Python.</p>
+											<a href="#" class="image"><img src="images/health.jpg" alt="" /></a>
+											<h3>Modelo de previsão de possíveis novos clientes </h3>
+											<p>Construí um modelo para prever se um cliente estaria interessado em Seguro de Veículo. Eu usei Python, Estatística e tecnicas não-supervisionadas de Machine Learning</p>
 											<ul class="actions">
 												<li><a href="#" class="button">Saiba Mais</a></li>
 											</ul>
