--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 											<h3>Modelo de previsão de possíveis novos clientes </h3>
 											<p>Construí um modelo para prever se um cliente estaria interessado em Seguro de Veículo. Eu usei Python, Estatística e tecnicas não-supervisionadas de Machine Learning</p>
 											<ul class="actions">
-												<li><a href="#" class="button">Saiba Mais</a></li>
+												<li><a href="https://github.com/GuilhermeMarquesss/Health_Insurance_Cross_Sell" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
 
