--- a/index.html
+++ b/index.html
@@ -132,6 +132,14 @@
 												<li><a href="https://github.com/GuilhermeMarquesss/Health_Insurance_Cross_Sell" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
+										<article>
+											<a href="#" class="image"><img src="images/logo.jpg" alt="" /></a>
+											<h3>Análise de dados para prever próximo país de destino.</h3>
+											<p>Eu usei Python, Estatística e tecnicas não-supervisionadas de Machine Learning . O time comercial exigiu modelos para prever em qual país será o primeiro destino de reserva de um novo usuário..</p>
+											<ul class="actions">
+												<li><a href="https://github.com/GuilhermeMarquesss/Airbnb_new_users" class="button">Saiba Mais</a></li>
+											</ul>
+										</article>
 
 									</div>
 								</section>
