--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/Rossmann.jpg" alt="" /></a>
+											<a href="https://github.com/GuilhermeMarquesss/DataScience_Em_Producao" class="image"><img src="images/Rossmann.jpg" height='300' width='300'alt="" /></a>
 											<h3>Construção de um programa de previsão de vendas.</h3>
 											<p>Eu usei Python, Estatística e tecnicas não-supervisionadas de Machine Learning . O diretor financeiro (CFO) exigiu modelos de previsão para a equipe de análise para apoiar sua decisão de quanto orçamento em cada loja precisa ser alocado.</p>
 											<ul class="actions">
@@ -125,7 +125,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/health.jpg" alt="" /></a>
+											<a href="https://github.com/GuilhermeMarquesss/Health_Insurance_Cross_Sell" class="image"><img src="images/health.jpg" height='300' width='300' alt="" /></a>
 											<h3>Modelo de previsão de possíveis novos clientes </h3>
 											<p>Construí um modelo para prever se um cliente estaria interessado em Seguro de Veículo. Eu usei Python, Estatística e tecnicas não-supervisionadas de Machine Learning</p>
 											<ul class="actions">
@@ -133,11 +133,19 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/logo.jpg" alt="" /></a>
+											<a href="https://github.com/GuilhermeMarquesss/Airbnb_new_users" class="image"><img src="images/logo.jpg" height='300' width='300' alt="" /></a>
 											<h3>Análise de dados para prever próximo país de destino.</h3>
-											<p>Eu usei Python, Estatística e tecnicas não-supervisionadas de Machine Learning . O time comercial exigiu modelos para prever em qual país será o primeiro destino de reserva de um novo usuário..</p>
+											<p>Eu usei Python, Estatística e tecnicas não-supervisionadas de Machine Learning . O time comercial exigiu modelos para prever em qual país será o primeiro destino de reserva de um novo usuário.</p>
 											<ul class="actions">
 												<li><a href="https://github.com/GuilhermeMarquesss/Airbnb_new_users" class="button">Saiba Mais</a></li>
+											</ul>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic07.jpg" height='300' width='300' alt="" /></a>
+											<h3>Em construção.</h3>
+											<p>Em construção.</p>
+											<ul class="actions">
+												<li><a href="#" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
 
