--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" height='300' width='300' alt="" /></a>
-											<h3>Em construção.</h3>
-											<p>Em construção.</p>
+											<a href="https://github.com/GuilhermeMarquesss/Block_Fraud" class="image"><img src="images/fraud2.jpg" height='300' width='300' alt="" /></a>
+											<h3>Detectar transações fraudulentas.</h3>
+											<p>Foi criado um modelo para encontrar transações fraudulentas.Eu usei Python, Estatística e tecnicas não-supervisionadas de Machine Learning.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">Saiba Mais</a></li>
+												<li><a href="https://github.com/GuilhermeMarquesss/Block_Fraud" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
 
