--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 										<p>Você vai encontrar também, minhas experiências profissionais, habilidades, ferramentas e conceitos envolvendo a Ciência de Dados.</p>
 										<br />
 										<ul class="actions">
-											<li><a href="#" class="button big">Descubra</a></li>
+											<li><a href="#projetos" class="button big">Descubra</a></li>
 										</ul>
 									</div>
 									<span class="image object">
@@ -57,8 +57,8 @@
 
 									<!-- Content -->
 										<h2 id="content">Meu nome é Guilherme Marques</h2>
-										<p>Sou formado em Administração de Empresas, e estou cursando Engenharia da Computação.Além disso, faço parte da Comunidade DS(programa de formação continua de Cientista de dados).
-											Atualmente estou buscando uma oportunidade de trabalhar profissionalmente como Cientista de Dados para melhorar a tomada de decisão da empresa, através da construção de soluções usando dados</p>
+										<p>Sou formado em Administração de Empresas, e estou cursando Engenharia da Computação. Além disso, faço parte da Comunidade DS(programa de formação continua de Cientista de dados).
+											Atualmente estou buscando uma oportunidade de trabalhar profissionalmente como Cientista de Dados para melhorar a tomada de decisão da empresa, através da construção de soluções usando dados.</p>
 								</section
 
 								<!-- Content -->
@@ -113,6 +113,7 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
+										<a name="projetos">
 										<h2>Projetos em Ciência de Dados.</h2>
 									</header>
 									<div class="posts">
