--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 									<header class="major">
 										<h2>Experiências Profissionais</h2>
 									</header>
-											<h3 id="content">Cientista de Dados na Comunidade DS (2022 - atual)</h3>
-													<p>Trabalhar com a coleta, o armazenamento e o tratamento de dados, transformando tudo isso em inteligência de negócio. 
+											<h3 id="content">Cientista de Dados Aprendiz na Comunidade DS (2022 - atual)</h3>
+													<p>Fazer a coleta, o armazenamento e o tratamento de dados, transformando tudo isso em inteligência de negócio. 
 														Levantar e organizar um volume grande de informações, criando relatórios e tornando esses dados inteligíveis para as pessoas na tomada de decisões..</p>
 											<h3 id="content">Auxiliar de TI (2021 - 2022)</h3>
 													<p>Alimentar o sistema com dados sobre compras, vendas, estoque, entre outros. Analisar dados do sistema e importar para planilhas. 
