--- a/index.html
+++ b/index.html
@@ -165,6 +165,14 @@
 									</header>
 									<div class="posts">
 										<article>
+											<a href="https://github.com/GuilhermeMarquesss/Credit-Card" class="image"><img src="images/bank.jpg" height='300' width='300'alt="" /></a>
+											<h3>Análise de Crédito para Bancos.</h3>
+											<p>Eu usei Python, Estatística e tecnicas não-supervisionadas de Machine Learning . Foi solicitado ao time de cientistas de dados, que com base no histórico de recomendações ("negar" ou "conceder") da empresa de crédito, aliado ao histórico financeiro dos clientes, desenvolvam um modelo de avaliação de aumento de limite de cartão de crédito dentro de casa.</p>
+											<ul class="actions">
+												<li><a href="https://github.com/GuilhermeMarquesss/Credit-Card" class="button">Saiba Mais</a></li>
+											</ul>
+										</article>
+										<article>
 											<a href="https://github.com/GuilhermeMarquesss/DataScience_Em_Producao" class="image"><img src="images/Rossmann.jpg" height='300' width='300'alt="" /></a>
 											<h3>Construção de um programa de previsão de vendas.</h3>
 											<p>Eu usei Python, Estatística e tecnicas não-supervisionadas de Machine Learning . O diretor financeiro (CFO) exigiu modelos de previsão para a equipe de análise para apoiar sua decisão de quanto orçamento em cada loja precisa ser alocado.</p>
