--- a/index.html
+++ b/index.html
@@ -159,12 +159,11 @@
 
 							<!-- Section -->
 								<section>
-									<header class="major">
-										<a name="projetos">
-										<h2>Projetos em Ciência de Dados.</h2>
-									</header>
-									<div class="posts">
-										<article>
+								<header class="major">
+									<h2>Projetos de Ciência de Dados</h2>
+								</header>
+								<div class="posts">
+									<article>
 											<a href="https://github.com/GuilhermeMarquesss/Credit-Card" class="image"><img src="images/bank.jpg" height='300' width='300'alt="" /></a>
 											<h3>Análise de Crédito para Bancos.</h3>
 											<p>Eu usei Python, Estatística e tecnicas não-supervisionadas de Machine Learning . Foi solicitado ao time de cientistas de dados, que com base no histórico de recomendações ("negar" ou "conceder") da empresa de crédito, aliado ao histórico financeiro dos clientes, desenvolvam um modelo de avaliação de aumento de limite de cartão de crédito dentro de casa.</p>
