--- a/index.html
+++ b/index.html
@@ -78,9 +78,12 @@
 									<header class="major">
 										<h2>Experiências Profissionais</h2>
 									</header>
-											<h3 id="content">Cientista de Dados Aprendiz na Comunidade DS (2022 - atual)</h3>
+											<h3 id="content">Cientista de Dados na Intellimetri(2023 - atual)</h3>
+													<p>Coletar, limpar e preparar dados para análise, usar técnicas estatísticas para modelar e analisar dados, trabalhar com a equipe de negócios para entender os requisitos de análise de dados e fornecer insights, criar visualizações de 
+													dados (dashboards) para comunicar resultados e insights. </p>
+											<h3 id="content">Cientista de Dados Aprendiz na Comunidade DS (2022 - 2023)</h3>
 													<p>Fazer a coleta, o armazenamento e o tratamento de dados, transformando tudo isso em inteligência de negócio. 
-														Levantar e organizar um volume grande de informações, criando relatórios e tornando esses dados inteligíveis para as pessoas na tomada de decisões..</p>
+														Levantar e organizar um volume grande de informações, criando relatórios e tornando esses dados inteligíveis para as pessoas na tomada de decisões.</p>
 											<h3 id="content">Auxiliar de TI (2021 - 2022)</h3>
 													<p>Alimentar o sistema com dados sobre compras, vendas, estoque, entre outros. Analisar dados do sistema e importar para planilhas. 
 													   Prestar suporte aos usuários da rede de computadores.</p>
