--- a/index-en.html
+++ b/index-en.html
@@ -68,7 +68,9 @@
 <header class="major">
 <h2>Professional Experiences</h2>
 </header>
-<h3 id="content">Data Scientist at Intellimetri (2023 - present)</h3>
+<h3 id="content">Data Scientist at Xertica.ai (2023 - present)</h3>
+<p>Developed scalable data solutions to support strategic decision-making across business units. Designed and implemented predictive models to anticipate client behavior, automated data pipelines for reporting, and collaborated with cross-functional teams to deliver actionable insights through intuitive dashboards and custom analyses.</p>
+<h3 id="content">Data Scientist at Intellimetri (2023 - 2023)</h3>
 <p>Collect, clean, and prepare data for analysis, use statistical techniques to model and analyze data, work with the business team to understand data analysis requirements and provide insights, create data visualizations (dashboards) to communicate results and insights.</p>
 <h3 id="content">Junior Data Scientist at Comunidade DS (2022 - 2023)</h3>
 <p>Collect, store, and process data, transforming it into business intelligence. Gather and organize a large volume of information, creating reports and making this data understandable for decision-makers.</p>
